[package]
name = "whirlpool-archive-converter"
version = "0.1.0"
edition = "2021"

[dependencies]
# Used
bigdecimal = "0.4.5"

# May be used
anyhow = "1.0.75"
thiserror = "*"
itertools = "0.10.1"
tokio = { version = "1.14.1", features = ["full"] }

anchor-lang = "0.29.0"
replay-engine = { git = "https://github.com/orca-so/whirlpool-tx-replayer", tag = "v0.1.6", package = "replay-engine" }
whirlpool-replayer = { git = "https://github.com/orca-so/whirlpool-tx-replayer", tag = "v0.1.6", package = "whirlpool-replayer" }
whirlpool_base = { git = "https://github.com/orca-so/whirlpools", package = "whirlpool", branch = "yugure/relax-spl-token-version-on-v0.3.2" }

zstd = "0.13.1"

clap = { version = "4.4.11", features = ["derive"] }


serde = "*"
serde_derive = "*"
serde_json = "1.0.107"
flate2 = "1.0.27"
csv = "1.3.0"
base64 = "0.21.4"
chrono = "0.4.31"
bincode = "1.3.3"

futures = "0.3"
tokio-stream = "0.1"
tokio-util = { version = "0.7.10", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-stream = "0.3.5"
futures-core = "0.3.30"
futures-util = "0.3.30"

num-format = "0.4.4"
